unpackaged/main/default/objects/sked_Profile_Approval_Queue_Access__mdt/sked_Profile_Approval_Queue_Access__mdt.object-meta.xml
<CustomObject>
    <label>Profile Approval Queue Access</label>
    <pluralLabel>Profiles Approval Queue Access</pluralLabel>
</CustomObject>