unpackaged/main/default/objects/sked_Profile_Approval_Queue_Access__mdt/fields/sked_DM_Drive_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>sked_DM_Drive_Change_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>District Manager Drive Change Requests</description>
    <label>DM Drive Change Request</label>
    <type>Checkbox</type>
</CustomField>