unpackaged/main/default/objects/sked_Profile_Approval_Queue_Access__mdt/fields/sked_DM_Pending_Action__c.field-meta.xml
<CustomField>
    <fullName>sked_DM_Pending_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>District Manager Pending Actions</description>
    <label>DM Pending Action</label>
    <type>Checkbox</type>
</CustomField>