unpackaged/main/default/objects/sked_Profile_Approval_Queue_Access__mdt/fields/sked_Drive_Shift_Trade_Request__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift_Trade_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drive Shift Trade Request</label>
    <type>Checkbox</type>
</CustomField>