unpackaged/main/default/objects/sked_Profile_Approval_Queue_Access__mdt/fields/sked_Pending_Action__c.field-meta.xml
<CustomField>
    <fullName>sked_Pending_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Action (Drives)</label>
    <type>Checkbox</type>
</CustomField>