unpackaged/main/default/objects/sked_Profile_Approval_Queue_Access__mdt/listViews/All_Settings.listView-meta.xml
<ListView>
    <fullName>All_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>sked_DM_Drive_Change_Request__c</columns>
    <columns>sked_DM_Pending_Action__c</columns>
    <columns>sked_Drive_Change_Request__c</columns>
    <columns>sked_Drive_Shift_Trade_Request__c</columns>
    <columns>sked_Pending_Action__c</columns>
    <columns>sked_Role_Time_Variance__c</columns>
    <columns>sked_CM_Role_Time_Variance__c</columns>
    <columns>sked_DM_Role_Time_Variance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Settings</label>
    <language>en_US</language>
</ListView>